--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+img {
+  width: 100%;
+}
+
 h1 {
   font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 }
@@ -7,6 +11,7 @@ h1 {
   margin-top: 10px;
   width: 25%;
   margin-bottom: 10px;
+  margin: auto;
 }
 
 .navmen {
@@ -15,10 +20,9 @@ h1 {
 
 .title {
   text-align: center;
-  margin: 20px;
   padding: 10px;
   border: 5px solid #000000;
-  background-color: #F6F6F6;
+  margin-top: 20px;
 }
 
 h2 {
@@ -34,14 +38,10 @@ h2 {
   font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   background-color: #F6F6F6;
   border: 5px solid #000000;
+  text-align: center;
 }
 p {
   margin: 10px;
-}
-.contact {
-  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-  background-color: #F6F6F6;
-  border: 5px solid #000000;
 }
 
 footer {
@@ -62,6 +62,10 @@ h3 {
   list-style-type: none;
 }
 
+a {
+  display: block;
+}
+
 li a {
   display: block;
   color: black;
@@ -80,18 +84,56 @@ li a:hover {
   justify-content: center;
 }
 
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.service-list {
+  text-align: left;
+}
+
+.words-2 {
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+  background-color: #F6F6F6;
+  border: 5px solid #000000;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.no-marks {
+  list-style-type: none;
+}
+
 @media only screen and (max-width: 960px) {
-  .contact {
-    border-top: 0px;
-  }
+  
 }
 
 @media only screen and (min-width: 961px) {
   .description {
     display: flex;
     flex: wrap;
-    margin: 20px;
-    border: 10px solid #000000;
+    margin: 30px;
+  }
+  .services{
+    display: flex;
+    flex: wrap;
+    margin: 30px;
+  }
+  .contact {
+    display: flex;
+    flex: wrap;
+    margin: 30px;
+  }
+  .title {
+    margin-left: 250px;
+    margin-right: 250px;
   }
   p {
     font-size: 18pt;
@@ -100,10 +142,10 @@ li a:hover {
     font-size: 36pt;
   }
   .words {
-    margin: 20px;
+    margin-left: 20px;
   }
   .food {
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 20px;
@@ -111,7 +153,7 @@ li a:hover {
   ul {
     font-size: 18pt;
   }
-  .contact {
-    margin: 20px;
+  .size {
+    width: 50%;
   }
 }
