--- a/pages/contact.css
+++ b/pages/contact.css
@@ -2,15 +2,50 @@ img {
   width: 100%;
 }
 
+.nav-link {
+  margin-right: 30px;
+}
+
+.navbar-brand img{
+  width: auto;
+  height: 60px !important;
+}
+
+.navbar-nav, .nav-link{
+  color:  rgba(0, 0, 0, 0.85);
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: black;
+}
+
+.navbar-light .navbar-nav .active>.nav-link  {
+  color: rgba(0,0,0,.75);
+}
+
+.navbar-light .navbar-nav .active>.nav-link:hover  {
+  color: grey;
+}
+
+.navbar-light .navbar-nav .nav-link:hover  {
+  color: white;
+}
+
+nav li:first-child{
+  margin-left: 30px;
+}
+
+.bg-light {
+  background-color: #81c583 !important;
+}
+
 .logo {
   justify-content: center;
   margin-top: 10px;
   width: 25%;
   margin-bottom: 10px;
-  margin: auto;
-}
-
-.navmen {
   margin: auto;
 }
 
@@ -56,6 +91,7 @@ h1 {
   padding: 10px;
   border: 5px solid #000000;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .description {
@@ -80,7 +116,17 @@ margin-left: 20px;
   width: 100%;
 }
 
-@media only screen and (min-width: 961px) {
+@media only screen and (max-width: 990px) {
+  li a {
+    margin-right:0;
+  }
+
+  nav li:first-child {
+    margin-left:0;
+  }
+}
+
+@media only screen and (min-width: 991px) {
   p {
     font-size: 18pt;
   }
