--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,34 @@ h1 {
   height: 60px !important;
 }
 
-.navbar-dark, .navbar-nav, .nav-link, .footer{
+.navbar-nav, .nav-link{
   color:  rgba(0, 0, 0, 0.85);
   font-size: 1.1em;
-  font-weight: 400;
+  font-weight: 500;
 }
 
-.navbar-dark .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {
   color: black;
 }
 
+.navbar-light .navbar-nav .active>.nav-link  {
+  color: rgba(0,0,0,.75);
+}
+
+.navbar-light .navbar-nav .active>.nav-link:hover  {
+  color: grey;
+}
+
+.navbar-light .navbar-nav .nav-link:hover  {
+  color: white;
+}
+
+nav li:first-child{
+  margin-left: 30px;
+}
+
 .bg-dark {
-  background-color: #68a16a !important;
+  background-color: #81c583 !important;
 }
 
 .logo {
@@ -62,8 +78,8 @@ p {
 footer {
   background-color: #F6F6F6;
   border-top: 5px solid #000000;
-  border-right: 5px solid #000000;
-  border-left: 5px solid #000000;
+  /*border-right: 5px solid #000000;
+  border-left: 5px solid #000000;*/
   text-align: center;
   font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   margin-top: 50px;
@@ -88,7 +104,7 @@ li a {
   padding: 8px 10px;
   text-decoration: none;
   font-size: 12pt;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 li a:hover {
@@ -126,11 +142,17 @@ li a:hover {
   list-style-type: none;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 990px) {
+  li a {
+    margin-right:0;
+  }
 
+  nav li:first-child {
+    margin-left:0;
+  }
 }
 
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 991px) {
   .description {
     display: flex;
     flex: wrap;
