--- a/pages/about.css
+++ b/pages/about.css
@@ -52,8 +52,8 @@ nav li:first-child{
 footer {
   background-color: #F6F6F6;
   border-top: 5px solid #000000;
-  border-right: 5px solid #000000;
-  border-left: 5px solid #000000;
+  /*border-right: 5px solid #000000;
+  border-left: 5px solid #000000;*/
   text-align: center;
   font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   margin-top: 50px;
