--- a/pages/services.css
+++ b/pages/services.css
@@ -75,7 +75,7 @@ li a {
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
-  font-size: 12pt;
+  /*font-size: 12pt;*/
   margin-right: 40px;
 }
 
@@ -123,6 +123,10 @@ p {
   margin-left: 20px;
 }
 
+nav {
+  border-bottom:solid;
+}
+
 
 @media screen and (max-width: 990px) {
   h6{
@@ -143,6 +147,30 @@ p {
 
   nav li:first-child {
     margin-left:0;
+  }
+  .part-one, .part-two, .nav-link, .contact, .description, .services {
+    font-size: 2.5em;
+  }
+
+  .part-one h3 {
+    font-size: 1.5em;
+  }
+
+  #menu {
+    padding-left:0;
+  }
+
+  .navbar-brand img{
+    height: 140px !important;
+  }
+  .navbar-toggler-icon{
+    height:80px;
+    width:80px;
+  }
+  nav li:first-child{
+    margin-left: 0;
+    margin-top: 20px;
+    border-top:solid;
   }
 }
 
