--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ li a {
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
-  font-size: 12pt;
+  /*font-size: 12pt;*/
   margin-right: 30px;
 }
 
@@ -144,13 +144,42 @@ li a:hover {
   list-style-type: none;
 }
 
+nav {
+  border-bottom:solid;
+}
+
 @media only screen and (max-width: 990px) {
   li a {
     margin-right:0;
+    margin-left:0;
   }
 
   nav li:first-child {
     margin-left:0;
+  }
+  .part-one, .part-two, .nav-link, .contact, .description, .services {
+    font-size: 2.5em;
+  }
+
+  .part-one h3 {
+    font-size: 1.5em;
+  }
+
+  #menu {
+    padding-left:0;
+  }
+
+  .navbar-brand img{
+    height: 140px !important;
+  }
+  .navbar-toggler-icon{
+    height:80px;
+    width:80px;
+  }
+  nav li:first-child{
+    margin-left: 0;
+    margin-top: 20px;
+    border-top:solid;
   }
 }
 
