--- a/pages/contact.css
+++ b/pages/contact.css
@@ -113,7 +113,7 @@ p {
 
 .end{
   margin-top: 30px;
-margin-left: 20px;
+  margin-left: 20px;
   margin-right: 20px;
   width: 100%;
 }
@@ -137,6 +137,13 @@ nav {
 
   .part-one h3 {
     font-size: 1.5em;
+  }
+
+  .end{
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right:0;
+    width: 100%;
   }
   
   h2 {
